Fix non-64 px divisible screens

--- a/src/components/GameOfLifeSimulation/_game-of-life-simulation.scss
+++ b/src/components/GameOfLifeSimulation/_game-of-life-simulation.scss
@@ -6,5 +6,6 @@ cmp-cgol-sim {
         image-rendering: pixelated;
         scale: var(--scale, 1);
         transform-origin: top left;
+        object-fit: cover;
     }
 }
